--- a/kustomizations/values.yaml
+++ b/kustomizations/values.yaml
@@ -1,9 +1,9 @@
 domain: bigbang.dev
 
 registryCredentials:
-  registry: "###ZARF_REGISTRY###"
+  registry: "${ZARF_REGISTRY}"
   username: "zarf-pull"
-  password: "###ZARF_REGISTRY_AUTH_PULL###"
+  password: "${ZARF_REGISTRY_AUTH_PULL}"
 
 git:
   existingSecret: "private-git-server"
