--- a/kustomizations/podinfo/base/helmrelease.yaml
+++ b/kustomizations/podinfo/base/helmrelease.yaml
@@ -41,9 +41,9 @@ spec:
        -  kind: Deployment
           apiVersion: apps/v1
           metadata:
-            name: ".*"
-            namespace: podinfo
+            name: podinfo
           spec:
             template:
-              labels:
-                protect: keycloak
+              metadata:
+                labels:
+                  protect: keycloak
