--- a/aws/dubbd-aws/zarf-config.yaml
+++ b/aws/dubbd-aws/zarf-config.yaml
@@ -18,14 +18,20 @@ package:
       cert_file: bigbang.dev.cert
       # -- Name of the EKS cluster
       name: "big-bang-aws"
-      # -- Name of existing Terraform state bucket
-      state_bucket_name: uds-dev-state-bucket
-      # -- Key path to Terraform state file within the bucket
-      state_key: tfstate/dev/uds-dev-state-bucket.tfstate
-      # -- Name of DynamoDB table used for Terraform state locking
-      state_dynamodb_table_name: uds-dev-state-dynamodb
+
       # -- AWS region
       region: us-west-2
+      # -- Name of existing Terraform state bucket
+      state_bucket_name: uds-dev-state-bucket
+      # -- Name of DynamoDB table used for Terraform state locking
+      state_dynamodb_table_name: uds-dev-state-dynamodb
+      
+      # -- Key path to Terraform state file within the bucket
+      state_key_loki: tfstate/dev/uds-dev-state-bucket-loki.tfstate
+      # -- Key path to Terraform state file within the bucket
+      state_key_velero: tfstate/dev/uds-dev-state-bucket-velero.tfstate
+       
+
       # -- Provision a private/internal load balancer for the admin ingress gateway, if false a public load balancer will be provisioned
       private_admin_lb: true
       # -- Provision a private/internal load balancer for the tenant ingress gateway, if false a public load balancer will be provisioned
@@ -33,4 +39,10 @@ package:
       # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-loki-"
       #loki_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
       # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Loki bucket
-      #loki_force_destroy: "true"
+#     loki_force_destroy: "true"
+      
+      # -- Bring your own kms key, if omitted a key will be created with an alias prefix of "<cluster name>-velero-"
+      #velero_kms_key_arn: "arn:aws:kms:us-west-2:000000000000:key/mrk-0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
+      # -- If set to true, delete the S3 bucket and corresponding KMS key associated with the Velero bucket
+#     velero_force_destroy: "true"
+
