--- a/aws/dubbd-aws/zarf.yaml
+++ b/aws/dubbd-aws/zarf.yaml
@@ -19,14 +19,16 @@ variables:
 - name: TERRAFORM_VERSION
 - name: TERRAFORM_PROVIDER_AWS_VERSION
 
-- name: STATE_BUCKET_NAME
-  description: "Name of the pre-existing Terraform state S3 bucket"
-- name: STATE_KEY
-  description: "Path to the state file key in the state bucket"
-- name: STATE_DYNAMODB_TABLE_NAME
-  description: "Name of the DynamoDB table used for Terraform state locking"
 - name: REGION
   description: "The AWS region to run the Terraform in"
+- name: STATE_BUCKET_NAME
+  description: "Name of the pre-existing Terraform state S3 bucket"
+- name: STATE_DYNAMODB_TABLE_NAME
+  description: "Name of the DynamoDB table used for Terraform state locking"
+- name: STATE_KEY_LOKI
+  description: "Path to the state file key in the state bucket"
+- name: STATE_KEY_VELERO
+  description: "Path to the state file key in the state bucket"
 
 - name: PRIVATE_ADMIN_LB
   description: "Provision a private/internal load balancer for the admin ingress gateway"
@@ -39,6 +41,10 @@ variables:
   description: "Provide a means to force destroy the Loki storage (S3) bucket even if it contains data"
   default: "false"
 
+- name: VELERO_FORCE_DESTROY
+  description: "Provide a means to force destroy the Velero storage (S3) bucket even if it contains data"
+  default: "false"
+
 components:
   - name: download-terraform
     required: true
@@ -47,13 +53,15 @@ components:
         after:
           - cmd: rm -f run/loki/terraform || true
             description: Clean up previous install since archiver doesn't overwrite the output
+          - cmd: rm -f run/velero/terraform || true
+            description: Clean up previous install since archiver doesn't overwrite the output
           - cmd: "./extract-terraform.sh ###ZARF_PKG_TMPL_TERRAFORM_VERSION### ###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###"
           # - cmd: rm -rf tmp
     files:
       - source: ../extract.sh
         target: extract-terraform.sh
         executable: true
-      # terraform binary into zarf package
+     # terraform binary into zarf package
       - source: https://releases.hashicorp.com/terraform/###ZARF_PKG_TMPL_TERRAFORM_VERSION###/terraform_###ZARF_PKG_TMPL_TERRAFORM_VERSION###_darwin_arm64.zip
         target: tmp/terraform_###ZARF_PKG_TMPL_TERRAFORM_VERSION###_darwin_arm64.zip
       - source: https://releases.hashicorp.com/terraform/###ZARF_PKG_TMPL_TERRAFORM_VERSION###/terraform_###ZARF_PKG_TMPL_TERRAFORM_VERSION###_darwin_amd64.zip
@@ -68,25 +76,25 @@ components:
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_linux_amd64.zip
       - source: https://releases.hashicorp.com/terraform-provider-aws/###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
         target: tmp/terraform-provider-aws_###ZARF_PKG_TMPL_TERRAFORM_PROVIDER_AWS_VERSION###_windows_amd64.zip
-  - name: loki-module
+  - name: loki-terraform-module
     required: true
     actions:
       onCreate:
         before:
           - cmd: terraform get -update
-            dir: ../loki
+            dir: ../s3
     files:
-    - source: ../loki/.terraform
+    - source: ../s3/.terraform
       target: run/loki/.terraform
-    - source: ../loki/main.tf
+    - source: ../s3/main.tf
       target: run/loki/main.tf
-    - source: ../loki/variables.tf
+    - source: ../s3/variables.tf
       target: run/loki/variables.tf
-    - source: ../loki/output.tf
+    - source: ../s3/output.tf
       target: run/loki/output.tf
-    - source: ../loki/terraform.tfvars
-      target: run/loki/terraform.tfvars
-  - name: execute-terraform
+    - source: ../s3/tf-loki.tfvars
+      target: run/loki/tf-loki.tfvars
+  - name: loki-terraform-execute
     required: true
     actions:
       onDeploy:
@@ -96,14 +104,14 @@ components:
           - cmd: |
               terraform init -force-copy \
               -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
-              -backend-config="key=${ZARF_VAR_STATE_KEY}" \
+              -backend-config="key=${ZARF_VAR_STATE_KEY_LOKI}" \
               -backend-config="region=${ZARF_VAR_REGION}" \
               -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
             dir: run/loki
-          - cmd: "terraform plan"
+          - cmd: "terraform plan -var-file=tf-loki.tfvars"
             dir: run/loki
           - cmd: sleep 15 #time to review
-          - cmd: "terraform apply -auto-approve"
+          - cmd: "terraform apply -var-file=tf-loki.tfvars -auto-approve"
             dir: run/loki
       onRemove:
         before:
@@ -111,14 +119,14 @@ components:
               if [ -d "run/loki" ]; then
                 cd run/loki
                 if [ "$(terraform output force_destroy)" = true ]; then
-                  terraform destroy -auto-approve
+                  terraform destroy -var-file=tf-loki.tfvars -auto-approve
                 else
                   echo "Skipping remove, force_destroy is set to false"
                 fi
               else
                 echo "Cannot remove: run/loki directory does not exist"
               fi
-  - name: outputs
+  - name: loki-terraform-outputs
     required: true
     actions:
       onDeploy:
@@ -135,6 +143,75 @@ components:
             dir: run/loki
             setVariables:
               - name: LOKI_S3_ROLE_ARN
+  - name: velero-terraform-module
+    required: true
+    actions:
+      onCreate:
+        before:
+          - cmd: terraform get -update
+            dir: ../s3
+    files:
+    - source: ../s3/.terraform
+      target: run/velero/.terraform
+    - source: ../s3/main.tf
+      target: run/velero/main.tf
+    - source: ../s3/variables.tf
+      target: run/velero/variables.tf
+    - source: ../s3/output.tf
+      target: run/velero/output.tf
+    - source: ../s3/tf-velero.tfvars
+      target: run/velero/tf-velero.tfvars
+  - name: velero-terraform-execute
+    required: true
+    actions:
+      onDeploy:
+        before:
+          - cmd: "test -d ./velero/ && chmod -R ugo+rwx ./velero/ || echo $?"
+            dir: run
+          - cmd: |
+              terraform init -force-copy \
+              -backend-config="bucket=${ZARF_VAR_STATE_BUCKET_NAME}" \
+              -backend-config="key=${ZARF_VAR_STATE_KEY_VELERO}" \
+              -backend-config="region=${ZARF_VAR_REGION}" \
+              -backend-config="dynamodb_table=${ZARF_VAR_STATE_DYNAMODB_TABLE_NAME}"
+            dir: run/velero
+          - cmd: "terraform plan -var-file=tf-velero.tfvars"
+            dir: run/velero
+          - cmd: sleep 15 #time to review
+          - cmd: "terraform apply -var-file=tf-velero.tfvars -auto-approve"
+            dir: run/velero
+      onRemove:
+        before:
+          - cmd: |
+              if [ -d "run/velero" ]; then
+                cd run/velero
+                if [ "$(terraform output force_destroy)" = true ]; then
+                  terraform destroy -var-file=tf-velero.tfvars -auto-approve
+                else
+                  echo "Skipping remove, force_destroy is set to false"
+                fi
+              else
+                echo "Cannot remove: run/velero directory does not exist"
+              fi
+  - name: velero-terraform-outputs
+    required: true
+    actions:
+      onDeploy:
+        after:
+          - cmd: "terraform output -raw s3_bucket"
+            dir: run/velero
+            setVariables:
+              - name: VELERO_S3_BUCKET
+          - cmd: "terraform output -raw aws_region"
+            dir: run/velero
+            setVariables:
+              - name: VELERO_S3_AWS_REGION
+          - cmd: "terraform output -raw irsa_role"
+            dir: run/velero
+            setVariables:
+              - name: VELERO_S3_ROLE_ARN
+
+
   - name: load-certs
     required: true
     import:
