--- a/values/kyverno.yaml
+++ b/values/kyverno.yaml
@@ -8,18 +8,10 @@ kyverno:
     updateStrategy:
       rollingUpdate:
         maxUnavailable: 0
-
-kyvernoPolicies:
-  values:
-    exclude:
-      any:
-        - resources:
-            namespaces: ###ZARF_VAR_EXEMPT_NAMESPACES###
-    policies:
-      restrict-image-registries:
-        parameters:
-          allow:
-            - registry1.dso.mil
-            - registry.dso.mil
-            - 127.0.0.1 # zarf registry
-            - "###ZARF_VAR_APPROVED_REGISTRIES###"
+    resources:
+      requests:
+        cpu: "1000m"
+        memory: "1Gi"
+      limits:
+        cpu: "1000m"
+        memory: "1Gi"
