--- a/.github/workflows/tag-and-release.yaml
+++ b/.github/workflows/tag-and-release.yaml
@@ -56,3 +56,4 @@ jobs:
     needs: [tag-new-version, publish-dubbd-core, publish-dubbd-k3d, publish-dubbd-rke2, publish-dubbd-aws]
     if: ${{ needs.tag-new-version.outputs.release_created == 'true'}}
     uses: ./.github/workflows/slack-notify-on-new-release.yaml
+    secrets: inherit
